# trust-region-noise-search

./: .gitignore  DEPLOY.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
noise_optimization/: main.py
noise_optimization/config/: main.yaml
noise_optimization/config/benchmark/: draw_bench.yaml  gen2eval.yaml  protein_fixed_length.yaml  qm9_properties.yaml
noise_optimization/config/data/: data.yaml
noise_optimization/config/defaults/: protein.yaml
noise_optimization/config/modality/: image.yaml  protein.yaml  qm9_target.yaml
noise_optimization/config/model/: equifm.yaml  proteina.yaml  sana_sprint.yaml  sd.yaml  sdxl_lightning.yaml
noise_optimization/config/reward_function/: aesthetic.yaml  combined.yaml  designability.yaml  hps.yaml  image_reward.yaml  multi_property_target.yaml
noise_optimization/config/reward_model/: brightness.yaml  clip.yaml  contrast.yaml  hps.yaml  jpeg_compressibility.yaml  radial_brightness.yaml  redness.yaml  saturation.yaml  sharpness.yaml
noise_optimization/config/solver/: random_search.yaml  trs.yaml  zero_order.yaml
noise_optimization/core/: __init__.py
noise_optimization/core/benchmarks/: __init__.py  base.py  molecule.py  protein.py  t2i.py
noise_optimization/core/loggers/: __init__.py  base.py  molecule_logger.py  molecule_visualizer.py  protein_logger.py  protein_visualizer.py  scaling_logger.py  t2i.py
noise_optimization/core/models/: __init__.py  factories.py  molecule.py  proteina.py  t2i.py
noise_optimization/core/pipelines/: __init__.py  common.py  model_summary.py  molecule.py  protein.py  t2i.py
scripts/: compute_diversity_novelty.sh  run_image_benchmarks.sh  run_protein_benchmarks.sh  run_qm9_target_benchmarks.sh
static/css/: index.css
static/js/: index.js
(+59 files in other folders)
